banner visibility issue

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -61,7 +61,7 @@ video{
     margin: 0 auto;
     width: 900px;
     height: 600px;
-    background-image: url(/images/banner/banner1.png);
+    background-image: url(../images/banner/banner1.png);
     background-size: 100%;
     background-repeat: no-repeat;
   
